--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-router": "~3.0.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "webpack": "5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
