--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-axios": "^3.4.1",
     "vue-router": "~3.0.0",
     "vuetify": "^2.6.0",
+    "vuex": "3.6.2",
     "webpack": "5.0.0"
   },
   "devDependencies": {
