--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "frontend_es2",
   "version": "0.1.0",
   "private": true,
+  "postinstall": "npm run build",
+  "start": "node server.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,9 +12,12 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "express": "^4.18.1",
+    "serve-static": "^1.15.0",
     "vue": "^2.6.14",
     "vue-router": "~3.0.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "webpack": "5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
